security: prouver l'identité des appareils
